codemp/generated/cgame/cg_view.h

void CG_TestModel_f();
void CG_TestGun_f();
void CG_TestModelNextFrame_f();
void CG_TestModelPrevFrame_f();
void CG_TestModelNextSkin_f();
void CG_TestModelPrevSkin_f();
static void CG_AddTestModel();
static void CG_CalcVrect();
static void CG_StepOffset();
static void CG_CalcIdealThirdPersonViewTarget();
static void CG_CalcIdealThirdPersonViewLocation();
static void CG_ResetThirdPersonViewDamp();
static void CG_UpdateThirdPersonTargetDamp();
static void CG_UpdateThirdPersonCameraDamp();
static void CG_OffsetThirdPersonView();
void CG_GetVehicleCamPos( vec3_t camPos );
static void CG_OffsetFirstPersonView();
static void CG_OffsetFighterView();
static int CG_CalcFov();
static void CG_DamageBlendBlob();
static qboolean CG_ThirdPersonActionCam();
qboolean CG_CheckPassengerTurretView();
static int CG_CalcViewValues();
static void CG_PowerupTimerSounds();
void CG_DrawSkyBoxPortal( const char *cstr );
void CG_AddBufferedSound( sfxHandle_t sfx );
static void CG_PlayBufferedSounds();
void CG_UpdateSoundTrackers();
void CG_SE_UpdateShake( vec3_t origin, vec3_t angles );
void CG_SE_UpdateMusic();
void CG_CalcScreenEffects();
void CGCam_Shake( float intensity, int duration );
void CG_DoCameraShake( vec3_t origin, float intensity, int radius, int time );
void CGCam_SetMusicMult( float multiplier, int duration );
void CG_EmplacedView( vec3_t angles );
static void CG_AddRefentForAutoMap( centity_t *cent );
void CG_AddRadarAutomapEnts();
void CG_DrawAutoMap();
void CG_SetupFrustum();
qboolean CG_CullPoint( vec3_t pt );
qboolean CG_CullPointAndRadius( const vec3_t pt, float radius );
CCALL void CG_DrawActiveFrame( int serverTime, stereoFrame_t stereoView, qboolean demoPlayback );